--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HouseHub</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/56c6bbf9ef.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app">React is not rendering properly</div>
