--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>HouseHub</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://fec-photos-storage.s3-us-west-1.amazonaws.com/AirBnB+logo.svg" type="svg"/>
+    <link rel="shortcut icon" href="https://fec-photos-storage.s3-us-west-1.amazonaws.com/AirBnB+logo.svg" type="svg"/>
     <script src="https://kit.fontawesome.com/56c6bbf9ef.js" crossorigin="anonymous"></script>
   </head>
   <body>
