--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="app">React is not rendering properly</div>
+    <div id="modal-root"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
