finished mockup of modal portion of frontend

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/56c6bbf9ef.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div id="app">React is not rendering properly</div>
+    <div id="img_carousel">React is not rendering the img carousel properly</div>
     <div id="modal-root"></div>
     <script src="bundle.js"></script>
   </body>
