--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE HTML>
-  <html lang="git en">
+  <html lang="en">
   <head>
-    <meta charset="utf-8">
     <title>HouseHub</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="An image carousel that displays a list of houses that are in the area to be rented">
+
+
     <link rel="icon" href="https://fec-photos-storage.s3-us-west-1.amazonaws.com/AirBnB+logo.svg" type="svg"/>
     <link rel="shortcut icon" href="https://fec-photos-storage.s3-us-west-1.amazonaws.com/AirBnB+logo.svg" type="svg"/>
 
-    <script src="https://kit.fontawesome.com/56c6bbf9ef.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fec-photos-storage-1.s3-us-west-1.amazonaws.com">
   </head>
   <body>
     <div id="img_carousel">React is not rendering the img carousel properly</div>
